# journald_fwdr

./: Cargo.toml  README.md
src/: main.rs
